--- a/assets/style.css
+++ b/assets/style.css
@@ -751,3 +751,83 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   .timeline-body > p + p {
     margin-top: 5px;
   }
+
+  
+
+/* Profil - texte */
+
+.img-responsive {
+    max-width: 350px;
+    border-radius: 50%;
+}
+  .welcome-pg {
+	margin-top: 40px;
+}
+
+
+div.welcome-txt p { 
+  font-family: "Courier";
+  font-size: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+  animation: type 4s steps(60, end); 
+}
+
+
+
+div.welcome-txt p:nth-child(2){
+  animation: type2 8s steps(60, end);
+}
+
+div.welcome-txt p:nth-child(3){
+  animation: type3 11s steps(60, end);
+}
+
+div.welcome-txt p:nth-child(4){
+  animation: type4 14s steps(60, end);
+}
+
+div.welcome-txt p:nth-child(5){
+  animation: type5 20s steps(60, end);
+}
+
+
+@keyframes type{ 
+  from { width: 0;} 
+} 
+
+@keyframes type2{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{width: 100;} 
+}
+
+@keyframes type3{
+  0%{width: 0;}
+  25%{width: 0;}
+  50%{width: 0;}
+  75%{width: 0;}
+  100%{width: 100;} 
+}
+
+@keyframes type4{
+  0%{width: 0;}
+  20%{width: 0;}
+  40%{width: 0;}
+  60%{width: 0;}
+  80%{width: 0;}
+  100%{width: 100;} 
+}
+
+@keyframes type5{
+  0%{width: 0;}
+  25%{width: 0;}
+  50%{width: 0;}
+  75%{width: 0;}
+  100%{width: 100;} 
+}
+
+
+
+
